--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,8 +4,9 @@
   <input type="file" name='image'/>
   <button type="submit">Submit</button>
 </form>
+{{!-- <img src="/upload/10901bbccaf627df52f5fa833fa90d7d.jpg" --}}
 {{!-- <ul>
-        {{#each users}}
+        {{#each username}}
         <li>{{this}}</li>
         {{/each}}
 </ul> --}}
